# watcher

./: Cargo.toml  config.toml  example.watcher.service  start.sh
src/: log_config.rs  log_watcher.rs  main.rs  watcher_config.rs
src/adapters/: axiom.rs  betterstack.rs  datadog.rs  log_adapter.rs  mod.rs
