[package]
name = "watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
axiom-rs = "0.11.0"
chrono = {version = "0.4.38", features = ["serde"]} 
notify = "7.0.0"
serde = {version = "1.0.215" ,features =["derive"]}
serde_json = "1.0.133"
tokio = {version = "1.41.1", features = ['full']}
toml = "0.8.19"
